rsvp/rsvp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rsvp-ingress
  annotations: 
     nginx.ingress.kubernetes.io/rewrite-target:  "/"
spec:
  rules:
  - host: rsvp.mydemo.local
    http:
      paths:
      - backend:
          serviceName: rsvp
          servicePort: 80
